--- a/deploy/charts/cert-manager/crds/certificates.yaml
+++ b/deploy/charts/cert-manager/crds/certificates.yaml
@@ -87,6 +87,7 @@ spec:
                   avoid generating invalid CSRs. This value is ignored by TLS clients
                   when any subject alt name is set. This is x509 behaviour: https://tools.ietf.org/html/rfc6125#section-6.4.4'
                 type: string
+                maxLength: 64
               dnsNames:
                 description: DNSNames is a list of subject alt names to be used on
                   the Certificate.
@@ -334,6 +335,7 @@ spec:
                   avoid generating invalid CSRs. This value is ignored by TLS clients
                   when any subject alt name is set. This is x509 behaviour: https://tools.ietf.org/html/rfc6125#section-6.4.4'
                 type: string
+                maxLength: 64
               dnsNames:
                 description: DNSNames is a list of subject alt names to be used on
                   the Certificate.
