--- a/deploy/charts/cert-manager/crds/challenges.yaml
+++ b/deploy/charts/cert-manager/crds/challenges.yaml
@@ -192,6 +192,7 @@ spec:
                               type: string
                         serviceConsumerDomain:
                           type: string
+                          minLength: 1
                     azuredns:
                       description: ACMEIssuerDNS01ProviderAzureDNS is a structure
                         containing the configuration for Azure DNS
@@ -220,11 +221,17 @@ spec:
                               type: string
                         environment:
                           type: string
-                          enum:
-                          - AzurePublicCloud
-                          - AzureChinaCloud
-                          - AzureGermanCloud
-                          - AzureUSGovernmentCloud
+                          allOf:
+                          - enum:
+                            - AzurePublicCloud
+                            - AzureChinaCloud
+                            - AzureGermanCloud
+                            - AzureUSGovernmentCloud
+                          - enum:
+                            - AzurePublicCloud
+                            - AzureChinaCloud
+                            - AzureGermanCloud
+                            - AzureUSGovernmentCloud
                         hostedZoneName:
                           type: string
                         resourceGroupName:
