Add integration testing framework and a basic conversion test
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -81,6 +81,7 @@ filegroup(
         "//pkg/webhook:all-srcs",
         "//test/acme/dns:all-srcs",
         "//test/e2e:all-srcs",
+        "//test/integration:all-srcs",
         "//test/unit/gen:all-srcs",
         "//test/unit/listers:all-srcs",
     ],
