Put OpenShift specific RBAC in all manifests
Signed-off-by: Maartje Eyskens <maartje@eyskens.me>

--- a/deploy/manifests/BUILD.bazel
+++ b/deploy/manifests/BUILD.bazel
@@ -14,9 +14,7 @@ VARIANTS = {
     "cert-manager-no-webhook": {
         "webhook.enabled": "false",
     },
-    "cert-manager-openshift": {
-        "global.isOpenshift": "true",
-    },
+    "cert-manager-openshift": {},
 }
 
 [helm_tmpl(
