install CRDs with helm
helm has patterns for installing CRDs that are followed by all
other charts. This brings cert-manager inline with the rest
of the community.

Signed-off-by: Drew Wells <drew.wells00@gmail.com>

--- a/deploy/charts/cert-manager/crds/orders.yaml
+++ b/deploy/charts/cert-manager/crds/orders.yaml
@@ -4,6 +4,7 @@ metadata:
   name: orders.acme.cert-manager.io
   annotations:
     cert-manager.io/inject-ca-from-secret: cert-manager/cert-manager-webhook-tls
+    helm.sh/hook: crd-install
 spec:
   additionalPrinterColumns:
   - JSONPath: .status.state
