Include CRDs as part of release assets published to GitHub
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/deploy/manifests/BUILD.bazel
+++ b/deploy/manifests/BUILD.bazel
@@ -58,7 +58,8 @@ VARIANTS = {
 
 pkg_tar(
     name = "manifests",
-    srcs = [":%s.yaml" % name for name in VARIANTS.keys()],
+    srcs = [":%s.yaml" % name for name in VARIANTS.keys()] +
+           [":%s.crds.yaml" % name for name in VARIANTS.keys()],
     extension = "tar.gz",
     mode = "0644",
     package_dir = "manifests",
