Avoid duplicate CRDs in static manifests
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/deploy/manifests/BUILD.bazel
+++ b/deploy/manifests/BUILD.bazel
@@ -14,13 +14,13 @@ VARIANTS = {
     "cert-manager": {
         "crd_variant": "regular",
         "values": {
-            "installCRDs": "true",
+            "installCRDs": "false",
         },
     },
     "cert-manager-legacy": {
         "crd_variant": "legacy",
         "values": {
-            "installCRDs": "true",
+            "installCRDs": "false",
         },
     },
 }
