--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -52,8 +52,9 @@ serviceAccount:
   create: true
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name:
-  annotations: {}
+  # name: ""
+  # Optional additional annotations to add to the controller's ServiceAccount
+  # annotations: {}
 
 # Optional additional arguments
 extraArgs: []
@@ -91,9 +92,11 @@ volumes: []
 
 volumeMounts: []
 
-deploymentAnnotations: {}
+# Optional additional annotations to add to the controller Deployment
+# deploymentAnnotations: {}
 
-podAnnotations: {}
+# Optional additional annotations to add to the controller Pods
+# podAnnotations: {}
 
 podLabels: {}
 # Optional DNS settings, useful if you have a public and private DNS zone for
@@ -163,9 +166,11 @@ webhook:
 
   securityContext: {}
 
-  deploymentAnnotations: {}
+  # Optional additional annotations to add to the webhook Deployment
+  # deploymentAnnotations: {}
 
-  podAnnotations: {}
+  # Optional additional annotations to add to the webhook Pods
+  # podAnnotations: {}
 
   # Optional additional arguments for webhook
   extraArgs: []
@@ -207,9 +212,11 @@ cainjector:
 
   securityContext: {}
 
-  deploymentAnnotations: {}
+  # Optional additional annotations to add to the cainjector Deployment
+  # deploymentAnnotations: {}
 
-  podAnnotations: {}
+  # Optional additional annotations to add to the cainjector Pods
+  # podAnnotations: {}
 
   # Optional additional arguments for cainjector
   extraArgs: []
