Moves issuing controller secret handler into secretsManager struct
Signed-off-by: JoshVanL <vleeuwenjoshua@gmail.com>

--- a/pkg/controller/expcertificates/issuing/BUILD.bazel
+++ b/pkg/controller/expcertificates/issuing/BUILD.bazel
@@ -54,12 +54,25 @@ filegroup(
 
 go_test(
     name = "go_default_test",
-    srcs = ["keystore_test.go"],
+    srcs = [
+        "issuing_controller_test.go",
+        "keystore_test.go",
+    ],
     embed = [":go_default_library"],
     deps = [
+        "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/apis/meta/v1:go_default_library",
+        "//pkg/controller:go_default_library",
+        "//pkg/controller/test:go_default_library",
         "//pkg/util/pki:go_default_library",
+        "//test/unit/gen:go_default_library",
         "@com_github_pavel_v_chernykh_keystore_go//:go_default_library",
         "@com_sslmate_software_src_go_pkcs12//:go_default_library",
+        "@io_k8s_api//core/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
+        "@io_k8s_client_go//testing:go_default_library",
+        "@io_k8s_utils//clock/testing:go_default_library",
     ],
 )
