--- a/cmd/ctl/BUILD.bazel
+++ b/cmd/ctl/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/cmd/ctl",
     visibility = ["//visibility:private"],
     deps = [
+        "//cmd/ctl/pkg/renew:go_default_library",
         "//cmd/ctl/pkg/version:go_default_library",
         "//pkg/util/cmd:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
@@ -34,6 +35,7 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
+        "//cmd/ctl/pkg/renew:all-srcs",
         "//cmd/ctl/pkg/version:all-srcs",
     ],
     tags = ["automanaged"],
