--- a/cmd/ctl/BUILD.bazel
+++ b/cmd/ctl/BUILD.bazel
@@ -6,7 +6,9 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/cmd/ctl",
     visibility = ["//visibility:private"],
     deps = [
-        "//cmd/ctl/cmd:go_default_library",
+        "//cmd/ctl/pkg/convert:go_default_library",
+        "//cmd/ctl/pkg/renew:go_default_library",
+        "//cmd/ctl/pkg/version:go_default_library",
         "//pkg/util/cmd:go_default_library",
     ],
 )
@@ -30,6 +32,7 @@ filegroup(
         ":package-srcs",
         "//cmd/ctl/cmd:all-srcs",
         "//cmd/ctl/pkg/convert:all-srcs",
+        "//cmd/ctl/pkg/renew:all-srcs",
         "//cmd/ctl/pkg/version:all-srcs",
     ],
     tags = ["automanaged"],
