Create 'predicate' package and standardise list and enqueue predicates
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/pkg/controller/expcertificates/issuing/BUILD.bazel
+++ b/pkg/controller/expcertificates/issuing/BUILD.bazel
@@ -18,6 +18,7 @@ go_library(
         "//pkg/client/listers/certmanager/v1alpha2:go_default_library",
         "//pkg/controller:go_default_library",
         "//pkg/controller/expcertificates:go_default_library",
+        "//pkg/controller/expcertificates/internal/predicate:go_default_library",
         "//pkg/logs:go_default_library",
         "//pkg/util/kube:go_default_library",
         "//pkg/util/pki:go_default_library",
