--- a/pkg/controller/expcertificates/BUILD.bazel
+++ b/pkg/controller/expcertificates/BUILD.bazel
@@ -49,4 +49,8 @@ go_test(
     name = "go_default_test",
     srcs = ["util_test.go"],
     embed = [":go_default_library"],
+    deps = [
+        "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/util/pki:go_default_library",
+    ],
 )
