expcertificates: add keymanager controller
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/pkg/controller/expcertificates/BUILD.bazel
+++ b/pkg/controller/expcertificates/BUILD.bazel
@@ -39,6 +39,7 @@ filegroup(
         ":package-srcs",
         "//pkg/controller/expcertificates/internal/predicate:all-srcs",
         "//pkg/controller/expcertificates/issuing:all-srcs",
+        "//pkg/controller/expcertificates/keymanager:all-srcs",
         "//pkg/controller/expcertificates/trigger:all-srcs",
     ],
     tags = ["automanaged"],
